--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My personal blog",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=development node app.js",
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "tailwind:css3": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
   },
