--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal blog",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development node app.js",
+    "start": "nodemon NODE_ENV=development node app.js",
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "tailwind:css3": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
   },
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
+    "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2",
     "tailwindcss": "^2.2.19"
