--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/vcgtz/awesome-blog#readme",
   "dependencies": {
-    "autoprefixer": "^10.4.0",
     "express": "^4.17.1",
-    "hbs": "^4.2.0",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2",
