🗄  Add mongoose and the basic configuration

--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,16 @@ Desktop.ini
 .directory
 *~
 
-
 # npm
 node_modules
 package-lock.json
 *.log
 *.gz
 
-
 # Coveralls
 coverage
 
 # Benchmarking
 benchmarks/graphs
+
+.env
