--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/vcgtz/awesome-blog#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "mongoose": "^6.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
