🛠  Add dotenv module

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/vcgtz/awesome-blog#readme",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
     "mongoose": "^6.1.6"
