--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "homepage": "https://github.com/vcgtz/awesome-blog#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
