--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon NODE_ENV=development node app.js",
-    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
-    "tailwind:css3": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
+    "compilecss": "postcss public/styles/tailwind.css -o public/styles/style.css",
+    "compilecss:prod": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
   },
   "repository": {
     "type": "git",
