--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.15"
   }
 }
