--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
