--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
