--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon NODE_ENV=development node app.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
     "compilecss": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "compilecss:prod": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
   },
@@ -37,6 +39,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2",
