--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/vcgtz/vg-blog#readme",
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
@@ -36,13 +37,14 @@
     "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "tailwindcss": "^3.0.15",
-    "@tailwindcss/forms": "^0.4.0"
+    "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2"
