--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon NODE_ENV=development node app.js",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
+    "test": "jest",
     "compilecss": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "compilecss:prod": "NODE_ENV=production postcss public/styles/tailwind.css -o public/styles/style.min.css"
   },
@@ -40,9 +41,11 @@
     "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.3",
     "jest": "^27.5.1",
     "jest-junit": "^13.0.0",
     "nodemon": "^2.0.15",
