--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal blog",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon NODE_ENV=development node app.js",
+    "start": "nodemon NODE_ENV=development --exec 'npm run compilecss && node app.js'",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "test": "jest",
