--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ yarn.lock
 # Style files
 public/styles/style.css
 public/styles/style.min.css
+public/styles/dashboard_styles.css
+public/styles/dashboard_styles.min.css
