--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "hbs": "^4.2.0",
+    "mariadb": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "sequelize": "^6.18.0",
     "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
