--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "sequelize": "^6.18.0",
+    "sequelize-cli": "^6.4.1",
     "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
